Improve design pattern